😀补充了上传文件

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
             <scope>runtime</scope>
         </dependency>
 
+<!--        redis-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
         <!--        mybatis-P-->
         <dependency>
             <groupId>com.baomidou</groupId>
