--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,4 +1,3 @@
-#log-file-path: E:/file/water-food/log
 
 spring:
   datasource:
@@ -7,6 +6,9 @@ spring:
     # 数据库用户名&密码：
     username: root
     password: wuyuanjian0
+
+server:
+  port: 80
 
 wechat:
   appid: wx58b3a19a84005b6f
@@ -24,6 +26,7 @@ path:
   reflect:
     prefix: i/
 
+vx:
+  reply: 欢迎订阅。。。。。点击此处进行完善身份信息，这样才能获取个性化的推荐信息哦！<a href =${}>【点击此处】</a>
 
-server:
-  port: 80
+
