--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -26,7 +26,15 @@ path:
   reflect:
     prefix: i/
 
+
+resource:
+  article:
+    defaultCoerURL: http:/
+    defaultTitle: 未设置标题
+
+
 vx:
   reply: 欢迎订阅。。。。。点击此处进行完善身份信息，这样才能获取个性化的推荐信息哦！<a href =${}>【点击此处】</a>
+
 
 
